Reverted edit of 218.17.80.112, changed back to last version by Paul G <Qur'an#35840>

--- a/wiki/Qur%27an.wikitext
+++ b/wiki/Qur%27an.wikitext
@@ -1,642 +1,79 @@
-[http://www.ec91.com 上网导航]
-[http://www.ec91.com/zhonghe 综合网站]
-[http://www.ec91.com/zhonghe/menhu.htm 门户]
-[http://www.ec91.com/zhonghe/meiti.htm 媒体]
-[http://www.ec91.com/zhonghe/caijing.htm 财经]
-[http://www.ec91.com/zhonghe/zhenjuan.htm 证券]
-[http://www.ec91.com/zhonghe/lvyou.htm 旅游]
-[http://www.ec91.com/zhonghe/lvyou.htm 酒店预订]
-[http://www.ec91.com/zhonghe/yule.htm 娱乐]
-[http://www.ec91.com/zhonghe/youxi.htm 游戏]
-[http://www.ec91.com/zhonghe/jiaoyu.htm 教育]
-[http://www.ec91.com/zhonghe/gaoxiao.htm 高校]
-[http://www.ec91.com/zhonghe/xiaoyuan.htm 校园]
-[http://www.ec91.com/zhonghe/wenxue.htm 文学]
-[http://www.ec91.com/zhonghe/zhaopin.htm 招聘]
-[http://www.ec91.com/zhonghe/tiyu.htm 体育]
-[http://www.ec91.com/zhonghe/nvxin.htm 女性]
-[http://www.ec91.com/zhonghe/jiankang.htm 健康]
-[http://www.ec91.com/zhonghe/shenghou.htm 生活]
-[http://www.ec91.com/zhonghe/yinhang.htm 银行]
-[http://www.ec91.com/zhonghe/qicezhixu.htm 汽车资讯]
-[http://www.ec91.com/zhonghe/qiceqiye.htm 汽车企业]
-[http://www.ec91.com/zhonghe/guojiabuwei.htm 国家部委]
-[http://www.ec91.com/zhonghe/difangzhenfu.htm 地方政府]
-[http://www.ec91.com/zhonghe/ITzhixu.htm IT资讯]
-[http://www.ec91.com/zhonghe/ITqiye.htm IT企业]
-[http://www.ec91.com/zhonghe/dianzhishangwu.htm 电子商务]
-[http://www.ec91.com/zhonghe/shoushuoyinqin.htm 搜索引擎]
-[http://www.ec91.com/zhonghe/email.htm 电子邮件]
-[http://www.ec91.com/zhonghe/kuandai.htm 宽带]
-[http://www.ec91.com/zhonghe/duanxin.htm 短信]
-[http://www.ec91.com/shiyong/lvyou_sy.htm 旅游地图]
-[http://www.ec91.com/dongmian  动漫]
-[http://www.ec91.com/dongmian  Flash]
-[http://www.ec91.com/dongmian  动漫音乐]
-[http://www.ec91.com/dongmian  动漫图片]
-[http://www.ec91.com/caipiao 彩票]
-[http://www.ec91.com/caipiao 足球彩票]
-[http://www.ec91.com/caipiao 体育彩票]
-[http://www.ec91.com/caipiao 福利彩票]
-[http://www.ec91.com/caipiao 博彩]
-[http://www.ec91.com/bbsliao 聊天]
-[http://www.ec91.com/bbsliao 聊天室]
-[http://www.ec91.com/bbsliao 语音聊天]
-[http://www.ec91.com/bbsliao 网上聊天]
-[http://www.ec91.com/bbsliao 视频聊天]
-[http://www.ec91.com/bbsliao 论坛]
-[http://www.ec91.com/dianyin 电影]
-[http://www.ec91.com/dianyin 免费电影]
-[http://www.ec91.com/dianyin 宽带电影]
-[http://www.ec91.com/dianyin 在线电影]
-[http://www.ec91.com/dianyin 影视论坛]
-[http://www.ec91.com/dianyin 免费电影]
-[http://www.ec91.com/dianyin 电影下载]
-[http://www.ec91.com/dianyin/kuandai.htm 宽带电影]
-[http://www.ec91.com/dianyin/dvd.htm dvd]
-[http://www.ec91.com/dianyin/dianjie.htm 电影节]
-[http://www.ec91.com/dianyin/diantai.htm 在线在线]
-[http://www.ec91.com/dianyin/hudong.htm 互联星空]
-[http://www.ec91.com/dianyin/gouwai.htm 国外影视]
-[http://www.ec91.com/dianyin/dinayugongshi.htm 电影公司]
-[http://www.ec91.com/bbsliao/jiaobss.htm 教育网]
-[http://www.ec91.com/bbsliao/lanbss.htm 论坛]
-[http://www.ec91.com/bbsliao/lanbss.htm BBS]
-[http://www.ec91.com/bbsliao/lanbss.htm 社区]
-[http://www.ec91.com/bbsliao/lanbss.htm 虚拟社区]
-[http://www.ec91.com/bbsliao/pobss.htm 博客]
-[http://www.ec91.com/bbsliao/qq.htm QQ]
-[http://www.ec91.com/bbsliao/qq.htm 腾讯]
-[http://www.ec91.com/bbsliao/qq.htm qq下载]
-[http://www.ec91.com/bbsliao/qq.htm 腾讯qq]
-[http://www.ec91.com/bbsliao/qq.htm 免费qq]
-[http://www.ec91.com/bbsliao/qq.htm 网易泡泡]
-[http://www.ec91.com/bbsliao/qq.htm MSN]
-[http://www.ec91.com/yinyue 音乐]
-[http://www.ec91.com/yinyue mp3]
-[http://www.ec91.com/yinyue 音乐下载]
-[http://www.ec91.com/yinyue Mp3下载]
-[http://www.ec91.com/yinyue 在线音乐]
-[http://www.ec91.com/yinyue 音乐网]
-[http://www.ec91.com/yinyue 流行音乐]
-[http://www.ec91.com/yinyue 歌曲]
-[http://www.ec91.com/yinyue/midi.htm MIDI音乐]
-[http://www.ec91.com/yinyue/midi.htm MIDI]
-[http://www.ec91.com/yinyue/dj.htm DJ音乐]
-[http://www.ec91.com/yinyue/dj.htm DJ]
-[http://www.ec91.com/yinyue/dj.htm DJ舞曲]
-[http://www.ec91.com/yinyue/dj.htm 粗口DJ]
-[http://www.ec91.com/yinyue/online.htm 在线听歌]
-[http://www.ec91.com/yinyue/online.htm 在线音乐]
-[http://www.ec91.com/yinyue/online.htm 音乐试听]
-[http://www.ec91.com/yinyue/online.htm 音乐下载]
-[http://www.ec91.com/yinyue/mp3.htm mp3下载]
-[http://www.ec91.com/yinyue/mp3.htm mp3]
-[http://www.ec91.com/yinyue/mp3.htm mp3播放器]
-[http://www.ec91.com/yinyue/mp3.htm 免费mp3下载]
-[http://www.ec91.com/yinyue/mp3.htm mp3免费下载]
-[http://www.ec91.com/yinyue/mp3.htm mp3音乐]
-[http://www.ec91.com/yinyue/gechi.htm 歌词]
-[http://www.ec91.com/yinyue/gechi.htm 英文歌词]
-[http://www.ec91.com/yinyue/fanchang.htm 另类音乐]
-[http://www.ec91.com/yinyue/fanchang.htm 翻唱]
-[http://www.ec91.com/yinyue/fanchang.htm 搞笑音乐]
-[http://www.ec91.com/yinyue/paihang.htm 音乐排行榜]
-[http://www.ec91.com/xinxiang 星座]
-[http://www.ec91.com/xinxiang 星座测试]
-[http://www.ec91.com/xinxiang 算命]
-[http://www.ec91.com/xinxiang 周易]
-[http://www.ec91.com/xinxiang 生肖]
-[http://www.ec91.com/xinxiang 星相]
-[http://www.ec91.com/xinxiang 占星]
-[http://www.ec91.com/xinxiang 占卜]
-[http://www.ec91.com/xinxiang 星座运程]
-[http://www.ec91.com/xinxiang/shengjie.htm 周公解梦]
-[http://www.ec91.com/xinxiang/shengjie.htm 解梦]
-[http://www.ec91.com/xinxiang/shengjie.htm 生肖]
-[http://www.ec91.com/xinxiang/shengjie.htm 十二生肖]
-[http://www.ec91.com/xinxiang/shengjie.htm 星座]
-[http://www.ec91.com/xinxiang/shengjie.htm 周易]
-[http://www.ec91.com/xinxiang/shengjie.htm 算命]
-[http://www.ec91.com/xinxiang/shuanmin.htm 黄历]
-[http://www.ec91.com/xinxiang/shuanmin.htm 运程]
-[http://www.ec91.com/xinxiang/shuanmin.htm 命运]
-[http://www.ec91.com/yishu 艺术]
-[http://www.ec91.com/yishu 人体艺术]
-[http://www.ec91.com/yishu 书法]
-[http://www.ec91.com/yishu 美术]
-[http://www.ec91.com/yishu 摄影]
-[http://www.ec91.com/yishu 集邮]
-[http://www.ec91.com/yishu 设计艺术]
-[http://www.ec91.com/yishu 爱好]
-[http://www.ec91.com/yishu/sheji.htm 平面设计]
-[http://www.ec91.com/yishu/sheji.htm 室内设计]
-[http://www.ec91.com/yishu/sheji.htm 广告设计]
-[http://www.ec91.com/yishu/sheji.htm 包装设计]
-[http://www.ec91.com/yishu/sheji.htm 服装设计]
-[http://www.ec91.com/yishu/sheji.htm 标志设计]
-[http://www.ec91.com/yishu/sheji.htm 设计]
-[http://www.ec91.com/yishu/jiyou.htm 集邮]
-[http://www.ec91.com/yishu/jiyou.htm 集邮在线]
-[http://www.ec91.com/yishu/jiyou.htm 中国集邮在线]
-[http://www.ec91.com/yishu/jiyou.htm 中国集邮网]
-[http://www.ec91.com/yishu/sheyin.htm 摄影]
-[http://www.ec91.com/yishu/sheyin.htm 人体摄影]
-[http://www.ec91.com/yishu/sheyin.htm 婚纱摄影]
-[http://www.ec91.com/yishu/sheyin.htm 摄影器材]
-[http://www.ec91.com/yishu/sheyin.htm 人体艺术摄影]
-[http://www.ec91.com/yishu/meishu.htm 美术]
-[http://www.ec91.com/yishu/meishu.htm 中国美术学院]
-[http://www.ec91.com/yishu/meishu.htm 美术学院]
-[http://www.ec91.com/yishu/meishu.htm 工艺美术]
-[http://www.ec91.com/yishu/shufa.htm 书法]
-[http://www.ec91.com/yishu/shufa.htm 中国书法]
-[http://www.ec91.com/yishu/shufa.htm 书法作品]
-[http://www.ec91.com/yishu/shufa.htm 硬笔书法]
-[http://www.ec91.com/yishu/shufa.htm 中国书法网]
-[http://www.ec91.com/yishu/shufa.htm 书法欣赏]
-[http://www.ec91.com/tiyu 体育]
-[http://www.ec91.com/tiyu 体育彩票]
-[http://www.ec91.com/tiyu 中国体育彩票]
-[http://www.ec91.com/tiyu 体育用品]
-[http://www.ec91.com/tiyu 体育新闻]
-[http://www.ec91.com/tiyu 体育运动]
-[http://www.ec91.com/tiyu/F1.htm F1]
-[http://www.ec91.com/tiyu/F1.htm F1赛车]
-[http://www.ec91.com/tiyu/F1.htm F1中国赛]
-[http://www.ec91.com/tiyu/F1.htm 赛车]
-[http://www.ec91.com/tiyu/F1.htm 一级方程式赛车]
-[http://www.ec91.com/tiyu/F1.htm 汽车拉力赛]
-[http://www.ec91.com/tiyu/nba.htm NBA]
-[http://www.ec91.com/tiyu/nba.htm 美国职业蓝球]
-[http://www.ec91.com/tiyu/nba.htm NBA中国]
-[http://www.ec91.com/tiyu/nba.htm 篮球]
-[http://www.ec91.com/tiyu/nba.htm 篮球联赛]
-[http://www.ec91.com/tiyu/nba.htm 街头篮球]
-[http://www.ec91.com/tiyu/nba.htm CBA]
-[http://www.ec91.com/tiyu/aoyun.htm 北京奥运会]
-[http://www.ec91.com/tiyu/aoyun.htm 2008北京奥运会]
-[http://www.ec91.com/tiyu/aoyun.htm 金牌榜]
-[http://www.ec91.com/tiyu/aoyun.htm 奥运会赛程]
-[http://www.ec91.com/tiyu/aoyun.htm 2008奥运会]
-[http://www.ec91.com/tiyu/sheji.htm 射击]
-[http://www.ec91.com/tiyu/sheji.htm 射箭]
-[http://www.ec91.com/tiyu/gaoerfu.htm 高尔夫]
-[http://www.ec91.com/tiyu/gaoerfu.htm 高尔夫球]
-[http://www.ec91.com/tiyu/gaoerfu.htm 高尔夫俱乐部]
-[http://www.ec91.com/tiyu/gaoerfu.htm 高尔夫用品]
-[http://www.ec91.com/tiyu/gaoerfu.htm 高尔夫球场]
-[http://www.ec91.com/tiyu/diaoyu.htm 钓鱼]
-[http://www.ec91.com/tiyu/diaoyu.htm 钓鱼用品]
-[http://www.ec91.com/tiyu/diaoyu.htm 渔具]
-[http://www.ec91.com/tiyu/diaoyu.htm 中国钓鱼]
-[http://www.ec91.com/tiyu/diaoyu.htm 钓鱼知识]
-[http://www.ec91.com/tiyu/diaoyu.htm 鱼饵]
-[http://www.ec91.com/tiyu/wudao.htm 舞蹈]
-[http://www.ec91.com/tiyu/wudao.htm 北京舞蹈学院]
-[http://www.ec91.com/tiyu/wudao.htm 体育舞蹈]
-[http://www.ec91.com/tiyu/wudao.htm 舞蹈学校]
-[http://www.ec91.com/tiyu/qipai.htm 棋牌]
-[http://www.ec91.com/tiyu/qipai.htm 围棋]
-[http://www.ec91.com/tiyu/qipai.htm 象棋]
-[http://www.ec91.com/tiyu/qipai.htm 五子棋]
-[http://www.ec91.com/tiyu/qipai.htm 中国象棋]
-[http://www.ec91.com/tiyu/qipai.htm 桥牌]
-[http://www.ec91.com/tiyu/yumaoqiu.htm 羽毛球]
-[http://www.ec91.com/tiyu/yumaoqiu.htm 中国羽毛球网]
-[http://www.ec91.com/tiyu/yumaoqiu.htm 中国羽毛球]
-[http://www.ec91.com/tiyu/yumaoqiu.htm 羽毛球比赛]
-[http://www.ec91.com/tiyu/pingpang.htm 乒乓球]
-[http://www.ec91.com/tiyu/pingpang.htm 乒乓球拍] 
-[http://www.ec91.com/tiyu/pingpang.htm 中国乒乓球]
-[http://www.ec91.com/tiyu/huwai.htm 户外运动]
-[http://www.ec91.com/tiyu/huwai.htm 探险]
-[http://www.ec91.com/tiyu/huwai.htm 攀岩]
-[http://www.ec91.com/tiyu/huwai.htm 极限运动]
-[http://www.ec91.com/tiyu/huwai.htm 野营]
-[http://www.ec91.com/tiyu/huwai.htm 水上运动]
-[http://www.ec91.com/tiyu/huwai.htm 滑雪]
-[http://www.ec91.com/tiyu/huwai.htm 登山]
-[http://www.ec91.com/tiyu/huwai.htm 户外]
-[http://www.ec91.com/ruanxia/ 软件下载]
-[http://www.ec91.com/ruanxia/ 软件]
-[http://www.ec91.com/ruanxia/ 华军软件园]
-[http://www.ec91.com/ruanxia/ 华军]
-[http://www.ec91.com/ruanxia/ 杀毒软件]
-[http://www.ec91.com/ruanxia/ 天空软件]
-[http://www.ec91.com/ruanxia/ 驱动程序]
-[http://www.ec91.com/ruanxia/ 下载软件]
-[http://www.ec91.com/game/ 游戏]
-[http://www.ec91.com/game/ 游戏下载]
-[http://www.ec91.com/game/ 小游戏]
-[http://www.ec91.com/game/ 在线游戏]
-[http://www.ec91.com/game/ 中国游戏中心]
-[http://www.ec91.com/game/ 游戏攻略]
-[http://www.ec91.com/game/ 网络游戏]
-[http://www.ec91.com/game/ 联众游戏]
-[http://www.ec91.com/game/jingshe.htm 江湖社区]
-[http://www.ec91.com/game/fankong.htm 反恐精英]
-[http://www.ec91.com/game/chuanqi.htm 传奇]
-[http://www.ec91.com/game/chuanqi.htm 传奇外挂]
-[http://www.ec91.com/game/chuanqi.htm 传奇私服]
-[http://www.ec91.com/game/chuanqi.htm 传奇3外挂]
-[http://www.ec91.com/game/chuanqi.htm 传奇3]
-[http://www.ec91.com/game/chuanqi.htm 大圣传奇]
-[http://www.ec91.com/game/chuanqi.htm 热血传奇]
-[http://www.ec91.com/game/gload.htm 小游戏]
-[http://www.ec91.com/game/lantan.htm 游戏论坛]
-[http://www.ec91.com/game/waigua.htm 游戏外挂]
-[http://www.ec91.com/game/digou.htm 帝国时代]
-[http://www.ec91.com/game/hangjing.htm 红色警戒]
-[http://www.ec91.com/game/hangjing.htm 红色警戒下载]
-[http://www.ec91.com/game/leishen.htm 雷神Quake]
-[http://www.ec91.com/game/xinji.htm 星际争霸]
-[http://www.ec91.com/game/wangluo.htm 网络游戏]
-[http://www.ec91.com/minxin/index.htm 明星美女]
-[http://www.ec91.com/minxin/gangtai.htm  港台明星]
-[http://www.ec91.com/minxin/dalu.htm 明星美女]
-[http://www.ec91.com/minxin/index.htm 大陆明星]
-[http://www.ec91.com/minxin/zhuixin.htm 追星一族]
-[http://www.ec91.com/minxin/guowai.htm 国外明星]
-[http://www.ec91.com/minxin/motou.htm 模特明星]
-[http://www.ec91.com/love/ 爱情]
-[http://www.ec91.com/love/ 交友]
-[http://www.ec91.com/love/ 爱情小说]
-[http://www.ec91.com/love/ 中国交友中心]
-[http://www.ec91.com/love/ 婚姻]
-[http://www.ec91.com/love/ 婚介]
-[http://www.ec91.com/love/xin.htm 心理测试]
-[http://www.ec91.com/love/xin.htm 心理]
-[http://www.ec91.com/love/xin.htm 心理学]
-[http://www.ec91.com/love/xin.htm 心理测验]
-[http://www.ec91.com/love/xin.htm 心理咨询]
-[http://www.ec91.com/love/ai.htm  爱情]
-[http://www.ec91.com/love/ai.htm  爱情小说]
-[http://www.ec91.com/love/ai.htm  爱情故事]
-[http://www.ec91.com/love/jiao.htm 交友]
-[http://www.ec91.com/love/jiao.htm 中国交友中心]
-[http://www.ec91.com/love/jiao.htm 婚介]
-[http://www.ec91.com/yule/ 娱乐]
-[http://www.ec91.com/yule/ 娱乐新闻]
-[http://www.ec91.com/yule/ 娱乐网]
-[http://www.ec91.com/yule/ 娱乐现场]
-[http://www.ec91.com/zhuqiu/ 足球世界]
-[http://www.ec91.com/zhuqiu/ 足球]
-[http://www.ec91.com/zhuqiu/ 足球宝贝]
-[http://www.ec91.com/zhuqiu/ 足球彩票]
-[http://www.ec91.com/zhuqiu/guozhuju.htm 足球俱乐部]
-[http://www.ec91.com/zhuqiu/zhuxiezhu.htm 足球协会]
-[http://www.ec91.com/zhuqiu/zhuxiezhu.htm 足协]
-[http://www.ec91.com/zhuqiu/zhuxiezhu.htm 足球]
-[http://www.ec91.com/zhuqiu/guoliju.htm 足球俱乐部]
-[http://www.ec91.com/chongwu/ 贺卡]
-[http://www.ec91.com/chongwu/ 宠物]
-[http://www.ec91.com/chongwu/ 电子贺卡]
-[http://www.ec91.com/chongwu/ 免费贺卡]
-[http://www.ec91.com/chongwu/ 生日贺卡]
-[http://www.ec91.com/chongwu/ 音乐贺卡]
-[http://www.ec91.com/chongwu/ 贺卡中心]
-[http://www.ec91.com/chongwu/chongwu.htm 宠物]
-[http://www.ec91.com/chongwu/chongwu.htm 养狗]
-[http://www.ec91.com/chongwu/chongwu.htm 宠物医院]
-[http://www.ec91.com/chongwu/chongwu.htm 宠物食品]
-[http://www.ec91.com/chongwu/chongwu.htm 养猫]
-[http://www.ec91.com/chongwu/chongwu.htm 养鸟]
-[http://www.ec91.com/chongwu/chongwu.htm 养鱼]
-[http://www.ec91.com/bizhi/ 壁纸图片]
-[http://www.ec91.com/bizhi/ 图片]
-[http://www.ec91.com/bizhi/ 桌面]
-[http://www.ec91.com/bizhi/ 美女图片]
-[http://www.ec91.com/bizhi/ 卡通图片]
-[http://www.ec91.com/bizhi/ 桌面壁纸]
-[http://www.ec91.com/bizhi/ 图标]
-[http://www.ec91.com/bizhi/ 屏保]
-[http://www.ec91.com/bizhi/zhoumian.htm 桌面图标]
-[http://www.ec91.com/bizhi/pinbao.htm 屏幕保护]
-[http://www.ec91.com/dianlaowanglou 电脑网络]
-[http://www.ec91.com/dianlaowanglou 网络]
-[http://www.ec91.com/dianlaowanglou 电脑]
-[http://www.ec91.com/dianlaowanglou 太平洋电脑]
-[http://www.ec91.com/dianlaowanglou 电脑报]
-[http://www.ec91.com/dianlaowanglou 电脑硬件]
-[http://www.ec91.com/dianlaowanglou 电脑报价]
-[http://www.ec91.com/dianlaowanglou 互联网]
-[http://www.ec91.com/dianlaowanglou/dianbao.htm 电脑报]
-[http://www.ec91.com/dianlaowanglou/it.htm IT资讯]
-[http://www.ec91.com/dianlaowanglou/dianjiao.htm 电脑教程]
-[http://www.ec91.com/yinjian 硬件]
-[http://www.ec91.com/yinjian 电脑硬件]
-[http://www.ec91.com/yinjian 电脑配件]
-[http://www.ec91.com/yinjian 电脑报价]
-[http://www.ec91.com/yinjian 硬件报价]
-[http://www.ec91.com/yinjian 电脑维修]
-[http://www.ec91.com/yinjian/pinpai.htm 品牌电脑]
-[http://www.ec91.com/yinjian/pinpai.htm 联想电脑]
-[http://www.ec91.com/yinjian/pinpai.htm 方正电脑]
-[http://www.ec91.com/yinjian/pinpai.htm 长城电脑]
-[http://www.ec91.com/yinjian/qudong.htm 驱动之家]
-[http://www.ec91.com/yinjian/qudong.htm 驱动程序]
-[http://www.ec91.com/yinjian/qudong.htm 显卡驱动]
-[http://www.ec91.com/yinjian/qudong.htm 驱动下载]
-[http://www.ec91.com/yinjian/yinbbs.htm 硬件论坛]
-[http://www.ec91.com/bianchen 程序]
-[http://www.ec91.com/bianchen 程序设计]
-[http://www.ec91.com/bianchen 编程]
-[http://www.ec91.com/bianchen 操作系统]
-[http://www.ec91.com/bianchen 程序员]
-[http://www.ec91.com/bianchen 源程序]
-[http://www.ec91.com/bianchen/Power.htm Power Builder]
-[http://www.ec91.com/bianchen/c.htm C++]
-[http://www.ec91.com/bianchen/Delphi.htm Delphi]
-[http://www.ec91.com/bianchen/vb.htm VB]
-[http://www.ec91.com/bianchen/clinux.htm 中文Linux]
-[http://www.ec91.com/bianchen/linux.htm Linux]
-[http://www.ec91.com/bianchen/linux.htm Unix]
-[http://www.ec91.com/haike 黑客]
-[http://www.ec91.com/haike 黑客软件]
-[http://www.ec91.com/haike 黑客工具]
-[http://www.ec91.com/haike 网络安全]
-[http://www.ec91.com/haike 杀毒]
-[http://www.ec91.com/haike 病毒]
-[http://www.ec91.com/web 网站制作]
-[http://www.ec91.com/web 网页制作]
-[http://www.ec91.com/web 网页素材]
-[http://www.ec91.com/web 网页特效]
-[http://www.ec91.com/web 网页设计]
-[http://www.ec91.com/web 网站建设]
-[http://www.ec91.com/web 网站设计]
-[http://www.ec91.com/web/dns.htm 域名]
-[http://www.ec91.com/web/dns.htm 免费域名]
-[http://www.ec91.com/web/dns.htm 虚拟主机]
-[http://www.ec91.com/web/dns.htm 免费空间]
-[http://www.ec91.com/zhunshi 军事国防]
-[http://www.ec91.com/zhunshi 国防]
-[http://www.ec91.com/zhunshi 中国军事]
-[http://www.ec91.com/zhunshi 军事论坛]
-[http://www.ec91.com/zhunshi 军事新闻]
-[http://www.ec91.com/zhunshi 武器]
-[http://www.ec91.com/zhunshi/zhunren.htm 军人]
-[http://www.ec91.com/zhunshi/zhunren.htm 中国军人]
-[http://www.ec91.com/zhunshi/zhunren.htm 战友]
-[http://www.ec91.com/zhunshi/zhunren.htm 军人生活]
-[http://www.ec91.com/wenxue　文学小说]
-[http://www.ec91.com/wenxue　小说]
-[http://www.ec91.com/wenxue　言情小说]
-[http://www.ec91.com/wenxue　武侠小说]
-[http://www.ec91.com/wenxue　玄幻小说]
-[http://www.ec91.com/rencai 人才]
-[http://www.ec91.com/rencai 招聘]
-[http://www.ec91.com/rencai 人才网]
-[http://www.ec91.com/rencai 人才市场]
-[http://www.ec91.com/rencai 求职]
-[http://www.ec91.com/kaoshi 考试]
-[http://www.ec91.com/kaoshi 自学考试]
-[http://www.ec91.com/kaoshi 司法考试]
-[http://www.ec91.com/kaoshi 公务员考试]
-[http://www.ec91.com/kaoshi 招生]
-[http://www.ec91.com/kaoshi 高考招生]
-[http://www.ec91.com/kaoshi/chenji.htm 成绩查询]
-[http://www.ec91.com/kaoshi/zhixue.htm 自学考试]
-[http://www.ec91.com/kaoshi/kaoyan.htm 考研]
-[http://www.ec91.com/kaoshi/kaoyan.htm 考研网]
-[http://www.ec91.com/kaoshi/kaoyan.htm 中国考研网]
-[http://www.ec91.com/kaoshi/gaokao.htm 高考]
-[http://www.ec91.com/kaoshi/chengao.htm 成人高考]
-[http://www.ec91.com/kaoshi/gongwu.htm 公务员考试]
-[http://www.ec91.com/kaoshi/shifa.htm 司法考试]
-[http://www.ec91.com/kaoshi/jishuanji.htm 计算机等级考试]
-[http://www.ec91.com/kaoshi/caihui.htm 财会考试]
-[http://www.ec91.com/kaoshi/caihui.htm 注册会计师]
-[http://www.ec91.com/kaoshi/caihui.htm 会计师考试]
-[http://www.ec91.com/kaoshi/english.htm 英语考试]
-[http://www.ec91.com/lenwen 论文课件]
-[http://www.ec91.com/lenwen 毕业论文]
-[http://www.ec91.com/lenwen 课件]
-[http://www.ec91.com/lenwen/kejian.htm 课件]
-[http://www.ec91.com/xueenglish 英语]
-[http://www.ec91.com/xueenglish/mba.htm MBA]
-[http://www.ec91.com/xueenglish/fanyi.htm 翻译]
-[http://www.ec91.com/gaoxiao 校友录]
-[http://www.ec91.com/gaoxiao 校园网]
-[http://www.ec91.com/gaoxiao 校园]
-[http://www.ec91.com/gaoxiao 高校]
-[http://www.ec91.com/gaoxiao 校友]
-[http://www.ec91.com/gaoxiao/xiaoyou.htm 校友录]
-[http://www.ec91.com/gaoxiao/tongxue.htm 同学录]
-[http://www.ec91.com/gaoxiao/difang 北京大学]
-[http://www.ec91.com/gaoxiao/difang 清华大学]
-[http://www.ec91.com/gaoxiao/difang 高校]
-[http://www.ec91.com/gaoxiao/difang/tianjing.htm 天津高校]
-[http://www.ec91.com/gaoxiao/difang/hubei.htm 湖北高校]
-[http://www.ec91.com/gaoxiao/difang/zhenjiang.htm　浙江高校]
-[http://www.ec91.com/gaoxiao/difang/guangdong.htm 广东高校]
-[http://www.ec91.com/gaoxiao/difang/chongqing.htm 重庆高校]
-[http://www.ec91.com/gaoxiao/difang/beijing.htm 北京高校]
-[http://www.ec91.com/haike/ip.htm IP地址查询]
-[http://www.ec91.com/yiliao/　医疗保健]
-[http://www.ec91.com/yiliao/　健康]
-[http://www.ec91.com/yiliao/　保健]
-[http://www.ec91.com/yiliao/　减肥]
-[http://www.ec91.com/yiliao/　糖尿病]
-[http://www.ec91.com/yiliao/　性病]
-[http://www.ec91.com/yiliao/　皮肤病]
-[http://www.ec91.com/yiliao/yiyuan 医院]
-[http://www.ec91.com/yiliao/yiyuan 综合医院]
-[http://www.ec91.com/yiliao/yiyuan 专科医院]
-[http://www.ec91.com/yixue/ 医学]
-[http://www.ec91.com/yixue/ 医药]
-[http://www.ec91.com/yixue/ 中药]
-[http://www.ec91.com/yixue/ 药材]
-[http://www.ec91.com/yixue/ 药品]
-[http://www.ec91.com/yixue/yiyao.htm 医药]
-[http://www.ec91.com/yixue/yiyao.htm 药品]
-[http://www.ec91.com/nanv 性爱]
-[http://www.ec91.com/nanv 性教育]
-[http://www.ec91.com/nanv 性知识]
-[http://www.ec91.com/nanv 性健康]
-[http://www.ec91.com/nanv 两性生活]
-[http://www.ec91.com/nanv/na.htm 男性]
-[http://www.ec91.com/nanv/nv.htm 女性]
-[http://www.ec91.com/shishang 时尚]
-[http://www.ec91.com/shishang 美容]
-[http://www.ec91.com/shishang 时尚美容]
-[http://www.ec91.com/shishang/zhazhi.htm 时尚杂志]
-[http://www.ec91.com/shishang/huazhuang.htm 化妆品]
-[http://www.ec91.com/shishang/huazhuang.htm 化妆]
-[http://www.ec91.com/shishang/huazhuang.htm 美容]
-[http://www.ec91.com/shishang/huazhuang.htm 香水]
-[http://www.ec91.com/shishang/huazhuang.htm 护肤]
-[http://www.ec91.com/shishang/meirang.htm 美容]
-[http://www.ec91.com/fzfs 服装]
-[http://www.ec91.com/fzfs 服饰]
-[http://www.ec91.com/fzfs/leiyi.htm 内衣]
-[http://www.ec91.com/fzfs/xua.htm 鞋业]
-[http://www.ec91.com/fzfs/xua.htm 帽业]
-[http://www.ec91.com/fzfs/xiangba.htm 箱包]
-[http://www.ec91.com/fzfs/cixiu.htm 刺绣]
-[http://www.ec91.com/fzfs/pingpai.htm 品牌服饰]
-[http://www.ec91.com/fzfs/shebei.htm 服装设备]
-[http://www.ec91.com/yingyang 美食]
-[http://www.ec91.com/yingyang 饮食]
-[http://www.ec91.com/yingyang 食谱]
-[http://www.ec91.com/yingyang 食品]
-[http://www.ec91.com/yingyang 营养]
-[http://www.ec91.com/fangchan 房产]
-[http://www.ec91.com/fangchan 家居]
-[http://www.ec91.com/fangchan 房地产]
-[http://www.ec91.com/fangchan 租房]
-[http://www.ec91.com/fangchan 建材]
-[http://www.ec91.com/fangchan 装修]
-[http://www.ec91.com/shenhuo 生活]
-[http://www.ec91.com/luyouditu 旅游]
-[http://www.ec91.com/luyouditu 地图]
-[http://www.ec91.com/luyouditu 旅游网]
-[http://www.ec91.com/luyouditu 旅游地图]
-[http://www.ec91.com/jiaotong 交通]
-[http://www.ec91.com/jiaotong/wuliu 物流]
-[http://www.ec91.com/jiaotong/wuliu 仓储]
-[http://www.ec91.com/jiaotong/huoyun.htm 货运]
-[http://www.ec91.com/gouwu 网上购物]
-[http://www.ec91.com/gouwu 网上商城]
-[http://www.ec91.com/gouwu 网上音像店]
-[http://www.ec91.com/gouwu 易趣]
-[http://www.ec91.com/gouwu 网上书店]
-[http://www.ec91.com/gouwu/paimai.htm 拍卖]
-[http://www.ec91.com/gouwu/book.htm 网上书店]
-[http://www.ec91.com/gouwu/book.htm 书店]
-[http://www.ec91.com/gouwu/book.htm 图书]
-[http://www.ec91.com/gouwu/book.htm 当当]
-[http://www.ec91.com/liping 礼品]
-[http://www.ec91.com/liping 鲜花]
-[http://www.ec91.com/liping/wanju.htm 玩具]
-[http://www.ec91.com/fangpi 纺织]
-[http://www.ec91.com/fangpi 中国纺织网]
-[http://www.ec91.com/fangpi 纺织品]
-[http://www.ec91.com/fangpi/pige.htm 皮革]
-[http://www.ec91.com/fangpi/mianhua.htm 棉花]
-[http://www.ec91.com/fangpi/shichou.htm 丝绸]
-[http://www.ec91.com/fangpi/yinruan.htm 印染]
-[http://www.ec91.com/fangpi/jixie.htm 纺织机械]
-[http://www.ec91.com/fangpi/guowai.htm 国外纺织行业]
-[http://www.ec91.com/guojimaoyi 商业]
-[http://www.ec91.com/guojimaoyi 贸易]
-[http://www.ec91.com/huangye 企业黄页]
-[http://www.ec91.com/gongyezhipin 工业制品]
-[http://www.ec91.com/gongyezhipin 工业]
-[http://www.ec91.com/anquan 监控]
-[http://www.ec91.com/anquan 安全防护]
-[http://www.ec91.com/anquan 安防]
-[http://www.ec91.com/anquan 监控]
-[http://www.ec91.com/jiadian 家电]
-[http://www.ec91.com/jiadian/suma.htm 数码]
-[http://www.ec91.com/jiadian/yingxiang.htm 音响]
-[http://www.ec91.com/shouji 手机]
-[http://www.ec91.com/shouji/jishang.htm 诺基亚]
-[http://www.ec91.com/shouji/jishang.htm 摩托罗拉]
-[http://www.ec91.com/shouji/jishang.htm 三星]
-[http://www.ec91.com/shouji/jishang.htm 索尼爱立信]
-[http://www.ec91.com/shouji/jishang.htm 科健]
-[http://www.ec91.com/shouji/yunshang.htm 中国电信]
-[http://www.ec91.com/shouji/tongxun.htm 通信]
-[http://www.ec91.com/shangfu 展览]
-[http://www.ec91.com/shangfu 会议]
-[http://www.ec91.com/shangfu/erben.htm 二板市场]
-[http://www.ec91.com/longlinmu 农业]
-[http://www.ec91.com/longlinmu/zhongzhi.htm 种植业]
-[http://www.ec91.com/longlinmu/yushui.htm 渔业]
-[http://www.ec91.com/longlinmu/xumu.htm 养殖业]
-[http://www.ec91.com/longlinmu/lingye.htm 林业]
-[http://www.ec91.com/longlinmu/huahui.htm 园林]
-[http://www.ec91.com/longlinmu/huahui.htm 花卉]
-[http://www.ec91.com/nvhua 环保]
-[http://www.ec91.com/nvhua/tianwen.htm 水资源]
-[http://www.ec91.com/nvhua/huanbao.htm 绿化]
-[http://www.ec91.com/yejing 冶金]
-[http://www.ec91.com/yejing/jingshu.htm 金属]
-[http://www.ec91.com/yejing/gangcai 钢材]
-[http://www.ec91.com/yejing/zhucao.htm 铸造]
-[http://www.ec91.com/langyuan 化工]
-[http://www.ec91.com/langyuan/leng 能源]
-[http://www.ec91.com/langyuan/leng/dian.htm 电力]
-[http://www.ec91.com/langyuan/leng/dian.htm 电力设备]
-[http://www.ec91.com/langyuan/leng/mei.htm 煤炭]
-[http://www.ec91.com/langyuan/shiyou.htm 石油]
-[http://www.ec91.com/langyuan/shiyou.htm 石化]
-[http://www.ec91.com/langyuan/xiangjian.htm 橡胶]
-[http://www.ec91.com/langyuan/shuliao.htm 塑料]
-[http://www.ec91.com/langyuan/tuliao.htm 涂料]
-[http://www.ec91.com/langyuan/riyong.htm 日化]
-[http://www.ec91.com/langyuan/boli.htm 玻璃]
-[http://www.ec91.com/langyuan/longye.htm 化肥]
-[http://www.ec91.com/langyuan/huashe.htm 化工设备]
-[http://www.ec91.com/jingrong 金融]
-[http://www.ec91.com/jingrong/yinghang.htm 银行]
-[http://www.ec91.com/jingrong/yinghang.htm 网上银行]
-[http://www.ec91.com/jingrong/baoxian.htm 保险]
-[http://www.ec91.com/jingrong/baoxian.htm 社会保险]
-[http://www.ec91.com/jingrong/baoxian.htm 养老保险]
-[http://www.ec91.com/jingrong/baoxian.htm 医疗保险]
-[http://www.ec91.com/jingrong/shebao.htm 社会保险]
-[http://www.ec91.com/jingrong/fangxian.htm 风险投资]
-[http://www.ec91.com/caijing 财经]
-[http://www.ec91.com/caijing 证券]
-[http://www.ec91.com/caijing/gupin.htm 股评]
-[http://www.ec91.com/caijing/bbs.htm 股市论坛]
-[http://www.ec91.com/caijing/fenxi.htm 股票分析软件]
-[http://www.ec91.com/caijing/gongshi.htm 证券]
-[http://www.ec91.com/faliu 法律]
-[http://www.ec91.com/faliu 律师]
-[http://www.ec91.com/faliu/zhishi.htm 知识产权]
-[http://www.ec91.com/faliu/liushi.htm 律师]
-[http://www.ec91.com/faliu/fayuan.htm 法院]
-[http://www.ec91.com/shenhui 文化]
-[http://www.ec91.com/shenhui/minshu.htm 民俗]
-[http://www.ec91.com/shenhui/gonggang.htm 公共事业]
-[http://www.ec91.com/shenhui/jiejia.htm 节假日]
-[http://www.ec91.com/shenhui/zhongjiao.htm 宗教]
-[http://www.ec91.com/shenhui/renwu.htm 人物]
-[http://www.ec91.com/guanggao 广告]
-[http://www.ec91.com/baozhang 包装]
-[http://www.ec91.com/baozhang 纸业]
-[http://www.ec91.com/baozhang 印刷]
-[http://www.ec91.com/yingshua 印刷]
-[http://www.ec91.com/yingshua/chubanshe.htm 出版社]
-[http://www.ec91.com/baokan 报刊]
-[http://www.ec91.com/diantai 电视台]
-[http://www.ec91.com/diantai/guangbo 广播电台]
-[http://www.ec91.com/diantai/dianjie.htm 电视节目]
-[http://www.ec91.com/news 新闻]
-[http://www.ec91.com/zhenfu 政府部门]
-[http://www.ec91.com/zhenfu/shebao.htm 社会保障]
-[http://www.ec91.com 网址精选]
-[http://www.ec91.com 搜索]
-[http://www.ec91.com/mianfei/kongjian.htm 免费空间]
-[http://www.ec91.com/mianfei/yumin.htm 免费域名]
-[http://www.ec91.com/mianfei/liaotian.htm 免费聊天室] 
-[http://www.ec91.com/mianfei/jishu.htm 免费计数器]
-[http://www.ec91.com/mianfei/liuyan.htm 免费留言板]
-[http://www.ec91.com/mianfei/sou.htm 搜索引擎]
-[http://www.ec91.com/mianfei/lianmeng.htm 网站联盟]
-[http://www.ec91.com/kexue/dili.htm 地理]
-[http://www.ec91.com/kexue/tianwen.htm 天文]
-[http://www.ec91.com/kexue/lishi.htm 历史]
-[http://www.ec91.com/kexue/wuli.htm 物理]
-[http://www.ec91.com/kexue/shuxue.htm 数学]
-[http://www.ec91.com/kexue/huaxue.htm 化学]
-[http://www.ec91.com/kexue/zhexue.htm 哲学]
-[http://www.ec91.com/kexue/xinlixue.htm 心理学]
-[http://www.ec91.com/kexue/zhenzhi.htm 政治学]
-[http://www.ec91.com/kexue/jingji.htm 经济学]
-[http://www.ec91.com/kexue/keyan.htm 科研]
-[http://www.ec91.com/kexue/shenwu.htm 生物]
-[http://www.ec91.com/shengshi 信息港]
-[http://www.ec91.com/chenqi 诚信企业]
-[http://www.ec91.com/jixiejidian 机械机电]
-[http://www.ec91.com/jixiejidian 机电]
-[http://www.ec91.com/jixiejidian 机械]
-[http://www.ec91.com/jixiejidian/yibiao.htm 仪器仪表]
-[http://www.ec91.com/jixiejidian/yibiao.htm 仪表]
-[http://www.ec91.com/jixiejidian/yibiao.htm 仪器]
-[http://www.ec91.com/dianzhidiangong 电子]
-[http://www.ec91.com/dianzhidiangong 电工]
-[http://www.ec91.com/inc/map.htm 网站地图]
+==English==
+===Proper noun===
+'''the Qur'an'''
+
+====Variant spellings====
+*[[Quraan]]
+*[[Koran]]
+*[[Quran]]
+*[[Alcoran]] (''obsolete'')
+
+#The [[Islamic]] holy book.
+#A copy of this book.
+
+==== Translations ====
+
+'''the Islamic holy book'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Arabic: [[القُرْآن]]
+*French: le [[Coran]] ''m''
+*German: der [[Koran]] ''m''
+*Hebrew: [[הקוראן]]
+*Italian: il [[Corano]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Romanian: [[Coranul]]
+*Spanish: el [[Corán]] ''m''
+*Swedish: [[koranen]]
+|}
+|}
+
+'''copy of this book'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Arabic: [[قُرْآن]]
+*French: le [[Coran]] ''m''
+*German: der [[Koran]] ''m''
+*Hebrew: [[קוראן]]
+*Italian: il [[Corano]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Romanian: [[Coran]]
+*Spanish: el [[Corán]] ''m''
+*Swedish: [[koran]] ''c''
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.
+
+*[[Basque]]: [[Koran]]
+*Bulgarian: [[Коран]] ''m''
+*Chinese: [[古蘭經]], [[古兰经]] (gǔlánjīng); [[可蘭經]], [[可兰经]] (kělánjīng)
+*Danish: [[Koranen]], [[Koran]] ''c''
+*Dutch: de [[Koran]]
+*[[Esperanto]]: [[Korano]]
+*Finnish: [[koraani]]
+*Indonesian: [[Al Qur'an]]
+*Japanese: [[クルアーン]] (kuruan)
+*Korean: [[꾸란]]
+*Polish: [[koran]]
+*[[Romanica]]: [[Coran]] ''m''
+*Slovene: [[Koran]] ''m''
+
+[[nl:Qur'an]]
