--- a/wiki/bah.wikitext
+++ b/wiki/bah.wikitext
@@ -1,6 +1,8 @@
-{{-en-}}
-{{-int-}}
-'''bah'''
+==English==
+===Interjection===
+'''bah'''!
+
 # An exclamation expressive of extreme contempt.
-{{-div-}}
+
+====Derived terms====
 *[[bah humbug]]
