--- a/wiki/moo.wikitext
+++ b/wiki/moo.wikitext
@@ -1,13 +1,2 @@
-a sound coming from the cow's mouth
-
-----
-
-==[[Manchu]]==
-
-'''Translations'''
-
-*[[English]]: [[tree]]
-*[[French]]: [[arbre]]
-*[[Greek]]: [[dendro]]/[[dendron]]
-*[[Italian]]: [[albero]]
-*[[Latin]]: [[arbor]]
+*A sound coming from the cow's mouth
+*An old or dialect word for [[haystack]].
