fmt; replaced defs in es: entry with translations; cut encyclopedic info; +Wikipedia link <garbanzo#65105>

--- a/wiki/garbanzo.wikitext
+++ b/wiki/garbanzo.wikitext
@@ -1,15 +1,22 @@
 {{-en-}}
 {{-hypn-}}
 :gar&middot;ban&middot;zo
+
 {{-noun-}}
-'''garbanzo''' ''m.'' ([[garbanzos]] ''plural'')
-# An edible [[pulse]] (Binomial name: ''Cicer arietinum'') of the [[family]] ''Leguminosae'' or ''Fabaceae'' and [[subfamily]] ''Faboideae'' or ''Papilionoideae''. The plant is 20&ndash;50 [[cm]] high and has small feathery leaves on both sides of the stem. One seed-pod contains 2&ndash;3 peas. The flowers are white or reddish blue. Chickpeas need a warm climate and more than 400 [[mm]] annual rain.
+'''garbanzo''' (''plural'' [[garbanzos]])
+
+# An edible [[pulse]], ''Cicer arietinum'', of the [[family]] ''Leguminosae'' or ''Fabaceae'' and [[subfamily]] ''Faboideae'' or ''Papilionoideae'', of which the plant has white or purple-blue flowers and small feathery leaves on both sides of the stem and yields pods containing two to three peas.
 # A seed of this plant.
+
+===See also===
+*[[w:garbanzo|Wikipedia article on garbanzo]]
+
 ----
 {{-es-}}
 {{-hypn-}}
 :gar&middot;ban&middot;zo
+
 {{-noun-}}
-'''garbanzo''' ''m.'' ([[garbanzos]] ''plural'')
-# An edible [[pulse]] (Binomial name: ''Cicer arietinum'') of the [[family]] ''Leguminosae'' or ''Fabaceae'' and [[subfamily]] ''Faboideae'' or ''Papilionoideae''. The plant is 20&ndash;50 [[cm]] high and has small feathery leaves on both sides of the stem. One seed-pod contains 2&ndash;3 peas. The flowers are white or reddish blue. Chickpeas need a warm climate and more than 400 [[mm]] annual rain.
-# A seed of this plant.
+'''garbanzo''' ''m'' (''plural'' [[garbanzos]])
+
+#garbanzo (''pulse, its seed'')
