fmt; plural; modified def and etym <fan base#65104>

--- a/wiki/fan_base.wikitext
+++ b/wiki/fan_base.wikitext
@@ -1,7 +1,9 @@
 {{-en-}}
 {{-etym-}}
-Probably from [[fan]], and [[base]].
+[[fan]] + [[base]]
+
 {{-noun-}}
-'''fanbase'''
-# The typical fans of something.
-#:''“Wikipedia’s fanbase seems to have browsers that support XHTML.”''
+'''fanbase''' (''plural'' '''fanbases''')
+
+#The collection of [[fan]]s of a thing or person.
+#:''Wikipedia’s fanbase seems to have browsers that support XHTML.''
