fmt <brass monkey#65064>

--- a/wiki/brass_monkey.wikitext
+++ b/wiki/brass_monkey.wikitext
@@ -1,5 +1,12 @@
 ===English===
+===Etymology===
+From the phrase '''[[cold enough to freeze the balls off a brass monkey]]'''
 
-===Phrase===
+===Adjective phrase===
+'''brass monkey''' (''no [[comparative]] or [[superlative]], used only before the noun'')
 
-Very cold weather - being cold enough to "freeze the balls off a brass monkey".
+====Variant spellings====
+'''brass-monkey'''
+
+#Said of the weather when it is very cold.
+#:''It's brass monkey weather today, isn't it?''
