fmt; numerous corrections; removed syns, which are not; var forms; Wikipedia link <crunk#65041>

--- a/wiki/crunk.wikitext
+++ b/wiki/crunk.wikitext
@@ -1,25 +1,28 @@
 ==English==
-
 ===Pronunciation===
-*(''US'') SAMPA:/krunk/.
+*[[IPA]]: /krʌŋk/
+*[[SAMPA]]: /krVNk/
 
-===Etomology===
-
-From the English words 'crazy' and 'drunk'. This is a slang term primarily used in the East.
+===Etymology===
+[[Blend]] of [[crazy]] and [[drunk]]
 
 ===Adjective===
+'''crunk'''
 
-'''Crunk'''
-
-# (slang) Crazy and drunk.
-# (slang) Wild or out of control.
+#(''US slang'') Crazy and drunk.
 
 ====Synonyms====
-*[[rowdy]] (adj.)
-*[[ecstastic]] (adj.)
+<!--not a synonym, as "rowdy" might mean "crazy" but does not mean "drunk" *[[rowdy]]-->
 
 ===Noun===
+'''crunk''' (''[[uncountable]]'')
 
-'''Crunk'''
+====Variant forms====
+*[[crunk rap]]
+*[[krunk]]
+*[[krunk rap]]
 
-# A type of rap with origins in the South.
+#A type of [[rap]] that originated in the southern [[United States]].
+
+===See also===
+*[[w:crunk|Wikipedia article on crunk]]
