--- a/wiki/%E5%8F%A4.wikitext
+++ b/wiki/%E5%8F%A4.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': old, classic, ancient
+* '''Common Meaning''': [[old]], [[classic]], [[ancient]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,11 +26,86 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': gu2
 
+===Compounds===
+*[[古奥]]
+*[[古巴]]
+*[[古板]]
+*[[古币]]
+*[[古刹]]
+*[[古城]]
+*[[古祠]]
+*[[古瓷]]
+*[[古代]]
+*[[古道]]
+*[[古道热肠]]
+*[[古典]]
+*[[古典主义]]
+*[[古调不弹]]
+*[[古董]]
+*[[古动物学]]
+*[[古都]]
+*[[古尔邦节]]
+*[[古方]], [[古方儿]]
+*[[古风]]
+*[[古怪]]
+*[[古国]]
+*[[古画]]
+*[[古话]]
+*[[古籍]]
+*[[古记]]
+*[[古迹]]
+*[[古今]]
+*[[古今中外]]
+*[[古井无波]]
+*[[古劲]]
+*[[古旧]]
+*[[古来]]
+*[[古兰经]]
+*[[古老]]
+*[[古老肉]]
+*[[古历]]
+*[[古庙]]
+*[[古墓]]
+*[[古朴]]
+*[[古气]]
+*[[古钱]]
+*[[古琴]]
+*[[古趣]]
+*[[古人]]
+*[[古色古香]]
+*[[古生代]]
+*[[古生界]]
+*[[古生物]]
+*[[古诗]]
+*[[古时]]
+*[[古书]]
+*[[古体诗]]
+*[[古铜色]]
+*[[古玩]]
+*[[古往今来]]
+*[[古为今用]]
+*[[古文]]
+*[[古文字]]
+*[[古物]]
+*[[古昔]]
+*[[古稀]]
+*[[古训]]
+*[[古雅]]
+*[[古谚]]
+*[[古音]]
+*[[古语]]
+*[[古猿]]
+*[[古远]]
+*[[古筝]]
+*[[古植物学]]
+*[[古装]]
+*[[古拙]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こ]] (ko)
