fmt; var forms <look-down, shoot-down#65039>

--- a/wiki/look-down%2C_shoot-down.wikitext
+++ b/wiki/look-down%2C_shoot-down.wikitext
@@ -1,1 +1,11 @@
-A title for a phased array radar powerful enough to pick aircraft out of ground clutter from high-altitude. So called beacuse it allows the intercepting aircraft to "look down" onto the suface, spot the enemy and "shoot them down"
+==English==
+===Etymology===
+From its capability of ''looking down'' from the intercepting aircraft to the ground and then ''shooting down'' the enemy.
+
+===Adjective===
+'''look-down, shoot-down'''
+
+====Variant forms====
+'''look-down shoot-down''', '''look-down/shoot-down''', '''look down/shoot down'''; ''also, non-standardly, without hyphens''
+
+#Describing a phased-array radar powerful enough to pick aircraft out of ground [[clutter]] from high [[altitude]].
