/* Variant forms */ <look-down, shoot-down#65039>

--- a/wiki/look-down%2C_shoot-down.wikitext
+++ b/wiki/look-down%2C_shoot-down.wikitext
@@ -6,6 +6,6 @@ From its capability of ''looking down'' from the intercepting aircraft to the gr
 '''look-down, shoot-down'''
 
 ====Variant forms====
-'''look-down shoot-down''', '''look-down/shoot-down''', '''look down/shoot down'''; ''also, non-standardly, without hyphens''
+'''look-down shoot-down''', '''look-down/shoot-down''' (''also, non-standardly, without hyphens'')
 
 #Describing a phased-array radar powerful enough to pick aircraft out of ground [[clutter]] from high [[altitude]].
