fmt; +it: entry <laguna#65148>

--- a/wiki/laguna.wikitext
+++ b/wiki/laguna.wikitext
@@ -1,3 +1,10 @@
+==Italian==
+===Noun===
+'''laguna''' ''f'' (''plural'' '''lagune''')
+
+#[[lagoon]]
+
+----
 {{-es-}}
 {{-etym-}}
 From [[Latin]] [[lacūna]].
@@ -5,5 +12,6 @@ From [[Latin]] [[lacūna]].
 {{-hypn-}}
 :la&middot;gu&middot;na
 {{-noun-}}
-'''laguna''' ''f.'' (''plural'' '''lagunas''')
-# A [[lagoon]]).
+'''laguna''' ''f'' (''plural'' '''lagunas''')
+
+#[[lagoon]]
