fmt; commented out "haystack" def until evidence can be found of this; +syn <moo#27559>

--- a/wiki/moo.wikitext
+++ b/wiki/moo.wikitext
@@ -1,2 +1,19 @@
-*A sound coming from the cow's mouth
-*An old or dialect word for [[haystack]].
+==English==
+===Noun===
+'''moo'''
+
+#The characteristic sound made by a [[cow]] or [[bull]].
+<!--any evidence of this? *An old or dialect word for [[haystack]].-->
+
+===Intransitive verb===
+'''to moo''' ('''mooing''', '''mooed''', '''mooed''')
+
+#Of a cow or bull, to make its characteristic sound.
+
+====Synonyms====
+*[[low]]
+
+===Interjection===
+'''moo!'''
+
+#The characteristic sound made by a [[cow]] or [[bull]].
