fmt; commented out "haystack" def until evidence can be found of this; +syn <moo#27559>

--- a/wiki/moo.wikitext
+++ b/wiki/moo.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''moo'''
+'''moo''' (''plural'' '''moos''')
 
 #The characteristic sound made by a [[cow]] or [[bull]].
 <!--any evidence of this? *An old or dialect word for [[haystack]].-->
