moved fi: here from "low"; +fr: for n, vi & interj <moo#27559>

--- a/wiki/moo.wikitext
+++ b/wiki/moo.wikitext
@@ -5,6 +5,23 @@
 #The characteristic sound made by a [[cow]] or [[bull]].
 <!--any evidence of this? *An old or dialect word for [[haystack]].-->
 
+====Translations====
+
+'''characteristic sound made by a cow or bull'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[meuglement]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
 ===Intransitive verb===
 '''to moo''' ('''mooing''', '''mooed''', '''mooed''')
 
@@ -13,7 +30,14 @@
 ====Synonyms====
 *[[low]]
 
+====Translations====
+*Finnish: [[ammua]]
+*French: [[meugler]]
+
 ===Interjection===
 '''moo!'''
 
 #The characteristic sound made by a [[cow]] or [[bull]].
+
+====Translations====
+*French: [[meuh]]!
