+German (a guy from Germany) <cash#34012>

--- a/wiki/cash.wikitext
+++ b/wiki/cash.wikitext
@@ -8,6 +8,7 @@
 *Dutch: [[contant]]
 *Finnish: [[käteinen]]
 *French: [[espèces]] ''f plural''
+*German: [[Bargeld]] ''n''
 *Hebrew: [[:he:מזומנים|מזומנים]] /me'zumanim/
 *Italian: [[liquidi]] ''m plural''
 *Russian: [[:ru:наличные|наличные]] /nalichni'e/ ''m plural''
