--- a/wiki/%EC%98%A4%EB%8A%98.wikitext
+++ b/wiki/%EC%98%A4%EB%8A%98.wikitext
@@ -1,5 +1,9 @@
-==Korean==
-<!-- noun or adverb in korean? -->
 '''오늘'''
+==Korean==
+===Noun===
+====Pronunciation====
+* / o-neul /
+====Meaning====
+*[[today]]
 
-# [[today]]
+[[ko:오늘]]
