--- a/wiki/%E8%AF%BB.wikitext
+++ b/wiki/%E8%AF%BB.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#read, study
-*# pronounce
-
+*# [[read]], [[study]]
+*# [[pronounce]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +32,20 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[讀]]
+
+===Compounds===
+*[[读本]]
+*[[读后感]]
+*[[读经]]
+*[[读破]]
+*[[读破句]]
+*[[读书]]
+*[[读书人]]
+*[[读数]]
+*[[读死书]]
+*[[读物]]
+*[[读音]]
+*[[读者]]
 
 * '''Other info''': 
 
