/* Japanese */ adding Pronunciation <今日#49718>

--- a/wiki/%E4%BB%8A%E6%97%A5.wikitext
+++ b/wiki/%E4%BB%8A%E6%97%A5.wikitext
@@ -1,6 +1,10 @@
 ==Japanese==
 '''[[今]][[日]]''' (きょう, こんにち)
 
+===Pronunciation===
+# / kyō / (きょう)
+# / kon-nichi / (こんにち)
+
 ===Noun===
 #(きょう)[[today]]
 #(きょう, こんにち)[[nowadays]]
